// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`section resources createSection should resolve with a new Section on success 1`] = `
{
  "created_datetime": "2020-10-14T14:26:35.921523+00:00",
  "decoration": null,
  "id": 1,
  "name": "test View",
  "private": false,
  "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
  "uri": "foo",
}
`;

exports[`section resources createSection should resolve with a new Section on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [
    {
      "allowAbsoluteUrls": true,
      "data": "{"name":"test View","private":false,"decoration":null}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "post",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/view-sections/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "put": [],
  "unlink": [],
}
`;

exports[`section resources deleteSection should resolve on success 1`] = `undefined`;

exports[`section resources fetchSections should resolve with a Section list on success 1`] = `
{
  "data": [
    {
      "created_datetime": "2020-10-14T14:26:35.921523+00:00",
      "decoration": null,
      "id": 1,
      "name": "test View",
      "private": false,
      "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
      "uri": "foo",
    },
    {
      "created_datetime": "2020-10-14T14:26:35.921523+00:00",
      "decoration": null,
      "id": 1,
      "name": "test View",
      "private": false,
      "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
      "uri": "foo",
    },
    {
      "created_datetime": "2020-10-14T14:26:35.921523+00:00",
      "decoration": null,
      "id": 1,
      "name": "test View",
      "private": false,
      "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
      "uri": "foo",
    },
  ],
}
`;

exports[`section resources updateSection should resolve with an updated Section on success 1`] = `
{
  "created_datetime": "2020-10-14T14:26:35.921523+00:00",
  "decoration": null,
  "id": 1,
  "name": "test View",
  "private": false,
  "updated_datetime": "2020-10-14T14:26:35.921523+00:00",
  "uri": "foo",
}
`;

exports[`section resources updateSection should resolve with an updated Section on success 2`] = `
{
  "delete": [],
  "get": [],
  "head": [],
  "link": [],
  "list": [],
  "options": [],
  "patch": [],
  "post": [],
  "put": [
    {
      "allowAbsoluteUrls": true,
      "data": "{"decoration":null,"name":"test View"}",
      "env": {
        "Blob": [Function],
        "FormData": [Function],
      },
      "headers": {
        "Accept": "application/json, text/plain, */*",
        "Content-Type": "application/json",
        "X-CSRF-Token": "abcd",
        "X-Gorgias-User-Client": "web",
      },
      "maxBodyLength": -1,
      "maxContentLength": -1,
      "method": "put",
      "timeout": 0,
      "transformRequest": [
        [Function],
      ],
      "transformResponse": [
        [Function],
      ],
      "transitional": {
        "clarifyTimeoutError": false,
        "forcedJSONParsing": true,
        "legacyInterceptorReqResOrdering": true,
        "silentJSONParsing": true,
      },
      "url": "/api/view-sections/1/",
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
  ],
  "unlink": [],
}
`;
